# polls_rest

./: .gitignore  Dockerfile  docker-compose.yml  manage.py  pyproject.toml
api/: conftest.py  factories.py  utils.py
api/migrations/: 0001_initial.py  0002_polls.py  0003_alter_user_avatar.py  0004_auto_20210619_2024.py  0005_auto_20210619_2032.py  0006_auto_20210625_1513.py  0007_user_is_active.py
api/models/: __init__.py  options_poll.py  polls.py  user.py  user_manager.py
api/serializers/: change_password.py  login_serializer.py  options_poll_serializer.py  poll_serializer.py  register_serializer.py  user_serializer.py
api/tests/: test_polls.py  test_user.py
api/viewsets/: poll.py  poll_options.py  security.py  user.py
nginx/: default.conf
polls_rest/: asgi.py  settings.py  urls.py  wsgi.py
